Update dependencies and refactor Svelte configuration
- Added @sveltejs/adapter-vercel for deployment optimization.
- Updated package.json and package-lock.json to include new adapter dependency.
- Refactored svelte.config.js to use the Vercel adapter.
- Enhanced app-header component to support children props for improved layout flexibility.
- Modified new trade page to handle preselected account state more effectively.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	"dependencies": {
 		"@supabase/ssr": "^0.8.0",
 		"@supabase/supabase-js": "^2.97.0",
+		"@sveltejs/adapter-vercel": "^6.3.3",
 		"bits-ui": "^2.16.2",
 		"chart.js": "^4.5.1",
 		"clsx": "^2.1.1",
